Fixz lgtm virtual call in constructor warnings

--- a/.editorconfig
+++ b/.editorconfig
@@ -181,10 +181,19 @@ dotnet_naming_style.camel_case.capitalization = camel_case
 dotnet_naming_style.upper.capitalization = all_upper
 
 
-[*.{csproj,json,md,yml}]
+[*.{csproj,json,yml}]
 # Formatting
 indent_style = space
 indent_size = 2
 charset = utf-8
 trim_trailing_whitespace = true
+insert_final_newline = true
+
+[*.md]
+# Formatting
+# Formatting
+indent_style = space
+indent_size = 2
+charset = utf-8
+trim_trailing_whitespace = false
 insert_final_newline = true
