--- a/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
+++ b/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
@@ -7,21 +7,158 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="TestFiles\Account\AccountDailycrafting.json" />
+    <None Remove="TestFiles\Account\Account.1.json" />
+    <None Remove="TestFiles\Account\Account.2.json" />
+    <None Remove="TestFiles\Account\AccountAchievements.json" />
+    <None Remove="TestFiles\Account\AccountBank.json" />
+    <None Remove="TestFiles\Account\AccountDailyCrafting.json" />
+    <None Remove="TestFiles\Account\AccountDungeons.json" />
+    <None Remove="TestFiles\Account\AccountDyes.json" />
+    <None Remove="TestFiles\Account\AccountFinishers.json" />
+    <None Remove="TestFiles\Account\AccountGliders.json" />
+    <None Remove="TestFiles\Account\AccountHomeCats.json" />
+    <None Remove="TestFiles\Account\AccountHomeNodes.json" />
+    <None Remove="TestFiles\Account\AccountInventory.json" />
     <None Remove="TestFiles\Account\AccountLuck.json" />
-    <None Remove="TestFiles\Account\AccountMapchests.json" />
+    <None Remove="TestFiles\Account\AccountMailCarriers.json" />
+    <None Remove="TestFiles\Account\AccountMapChests.json" />
+    <None Remove="TestFiles\Account\AccountMasteries.json" />
+    <None Remove="TestFiles\Account\AccountMasteryPoints.json" />
+    <None Remove="TestFiles\Account\AccountMaterials.json" />
+    <None Remove="TestFiles\Account\AccountMinis.json" />
     <None Remove="TestFiles\Account\AccountMountsSkins.json" />
     <None Remove="TestFiles\Account\AccountMountsTypes.json" />
+    <None Remove="TestFiles\Account\AccountOutfits.json" />
+    <None Remove="TestFiles\Account\AccountPvpHeroes.json" />
+    <None Remove="TestFiles\Account\AccountRaids.json" />
+    <None Remove="TestFiles\Account\AccountRecipes.json" />
+    <None Remove="TestFiles\Account\AccountSkins.json" />
+    <None Remove="TestFiles\Account\AccountTitles.json" />
+    <None Remove="TestFiles\Account\AccountWallet.json" />
     <None Remove="TestFiles\Account\AccountWorldBosses.json" />
+    <None Remove="TestFiles\Achievements\Achievements.bulk.json" />
+    <None Remove="TestFiles\Achievements\Achievements.ids.json" />
+    <None Remove="TestFiles\Achievements\Achievements.single.json" />
+    <None Remove="TestFiles\Achievements\AchievementsCategories.bulk.json" />
+    <None Remove="TestFiles\Achievements\AchievementsCategories.ids.json" />
+    <None Remove="TestFiles\Achievements\AchievementsCategories.single.json" />
+    <None Remove="TestFiles\Achievements\AchievementsDaily.json" />
+    <None Remove="TestFiles\Achievements\AchievementsGroups.bulk.json" />
+    <None Remove="TestFiles\Achievements\AchievementsGroups.ids.json" />
+    <None Remove="TestFiles\Achievements\AchievementsGroups.single.json" />
+    <None Remove="TestFiles\Backstory\BackstoryAnswers.bulk.json" />
+    <None Remove="TestFiles\Backstory\BackstoryAnswers.ids.json" />
+    <None Remove="TestFiles\Backstory\BackstoryAnswers.single.json" />
+    <None Remove="TestFiles\Backstory\BackstoryQuestions.bulk.json" />
+    <None Remove="TestFiles\Backstory\BackstoryQuestions.ids.json" />
+    <None Remove="TestFiles\Backstory\BackstoryQuestions.single.json" />
+    <None Remove="TestFiles\Build\Build.json" />
+    <None Remove="TestFiles\Characters\Characters.bulk.json" />
+    <None Remove="TestFiles\Characters\Characters.ids.json" />
+    <None Remove="TestFiles\Characters\Characters.single.json" />
+    <None Remove="TestFiles\Characters\CharactersIdBackstory.json" />
+    <None Remove="TestFiles\Characters\CharactersIdCore.json" />
+    <None Remove="TestFiles\Characters\CharactersIdCrafting.json" />
+    <None Remove="TestFiles\Characters\CharactersIdEquipment.json" />
+    <None Remove="TestFiles\Characters\CharactersIdHeroPoints.json" />
+    <None Remove="TestFiles\Characters\CharactersIdInventory.json" />
+    <None Remove="TestFiles\Characters\CharactersIdRecipes.json" />
+    <None Remove="TestFiles\Characters\CharactersIdSab.json" />
+    <None Remove="TestFiles\Characters\CharactersIdSkills.json" />
+    <None Remove="TestFiles\Characters\CharactersIdSpecializations.json" />
+    <None Remove="TestFiles\Characters\CharactersIdTraining.json" />
     <None Remove="TestFiles\Colors\Colors.bulk.json" />
     <None Remove="TestFiles\Colors\Colors.ids.json" />
     <None Remove="TestFiles\Colors\Colors.single.json" />
+    <None Remove="TestFiles\Commerce\CommerceDelivery.json" />
+    <None Remove="TestFiles\Commerce\CommerceExchangeCoins.json" />
+    <None Remove="TestFiles\Commerce\CommerceExchangeGems.json" />
+    <None Remove="TestFiles\Commerce\CommerceListings.bulk.json" />
+    <None Remove="TestFiles\Commerce\CommerceListings.ids.json" />
+    <None Remove="TestFiles\Commerce\CommerceListings.single.json" />
+    <None Remove="TestFiles\Commerce\CommercePrices.bulk.json" />
+    <None Remove="TestFiles\Commerce\CommercePrices.ids.json" />
+    <None Remove="TestFiles\Commerce\CommercePrices.single.json" />
+    <None Remove="TestFiles\Commerce\CommerceTransactionsCurrent.json" />
+    <None Remove="TestFiles\Commerce\CommerceTransactionsHistory.json" />
+    <None Remove="TestFiles\Continents\Continents.bulk.json" />
+    <None Remove="TestFiles\Continents\Continents.ids.json" />
+    <None Remove="TestFiles\Continents\Continents.single.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloors.bulk.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloors.ids.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloors.single.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloorsRegions.bulk.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloorsRegions.ids.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloorsRegions.single.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloorsRegionsMaps.bulk.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloorsRegionsMaps.ids.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloorsRegionsMaps.single.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloorsRegionsMapsPois.bulk.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloorsRegionsMapsPois.ids.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloorsRegionsMapsPois.single.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloorsRegionsMapsSectors.bulk.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloorsRegionsMapsSectors.ids.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloorsRegionsMapsSectors.single.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloorsRegionsMapsTasks.bulk.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloorsRegionsMapsTasks.ids.json" />
+    <None Remove="TestFiles\Continents\ContinentsFloorsRegionsMapsTasks.single.json" />
+    <None Remove="TestFiles\CreateSubtoken\CreateSubtoken.json" />
+    <None Remove="TestFiles\Currencies\Currencies.bulk.json" />
+    <None Remove="TestFiles\Currencies\Currencies.ids.json" />
+    <None Remove="TestFiles\Currencies\Currencies.single.json" />
     <None Remove="TestFiles\DailyCrafting\DailyCrafting.bulk.json" />
     <None Remove="TestFiles\DailyCrafting\DailyCrafting.ids.json" />
     <None Remove="TestFiles\DailyCrafting\DailyCrafting.single.json" />
+    <None Remove="TestFiles\Dungeons\Dungeons.bulk.json" />
+    <None Remove="TestFiles\Dungeons\Dungeons.ids.json" />
+    <None Remove="TestFiles\Dungeons\Dungeons.single.json" />
+    <None Remove="TestFiles\Emblem\EmblemBackgrounds.bulk.json" />
+    <None Remove="TestFiles\Emblem\EmblemBackgrounds.ids.json" />
+    <None Remove="TestFiles\Emblem\EmblemBackgrounds.single.json" />
+    <None Remove="TestFiles\Emblem\EmblemForegrounds.bulk.json" />
+    <None Remove="TestFiles\Emblem\EmblemForegrounds.ids.json" />
+    <None Remove="TestFiles\Emblem\EmblemForegrounds.single.json" />
+    <None Remove="TestFiles\Files\Files.bulk.json" />
+    <None Remove="TestFiles\Files\Files.ids.json" />
+    <None Remove="TestFiles\Files\Files.single.json" />
+    <None Remove="TestFiles\Finishers\Finishers.bulk.json" />
+    <None Remove="TestFiles\Finishers\Finishers.ids.json" />
+    <None Remove="TestFiles\Finishers\Finishers.single.json" />
+    <None Remove="TestFiles\Gliders\Gliders.bulk.json" />
+    <None Remove="TestFiles\Gliders\Gliders.ids.json" />
+    <None Remove="TestFiles\Gliders\Gliders.single.json" />
+    <None Remove="TestFiles\Guild\GuildId.1.json" />
+    <None Remove="TestFiles\Guild\GuildId.2.json" />
+    <None Remove="TestFiles\Guild\GuildIdLog.json" />
+    <None Remove="TestFiles\Guild\GuildIdMembers.json" />
+    <None Remove="TestFiles\Guild\GuildIdRanks.json" />
+    <None Remove="TestFiles\Guild\GuildIdStash.json" />
+    <None Remove="TestFiles\Guild\GuildIdStorage.json" />
+    <None Remove="TestFiles\Guild\GuildIdTeams.json" />
+    <None Remove="TestFiles\Guild\GuildIdTreasury.json" />
+    <None Remove="TestFiles\Guild\GuildIdUpgrades.json" />
+    <None Remove="TestFiles\Guild\GuildPermissions.bulk.json" />
+    <None Remove="TestFiles\Guild\GuildPermissions.ids.json" />
+    <None Remove="TestFiles\Guild\GuildPermissions.single.json" />
+    <None Remove="TestFiles\Guild\GuildSearch.json" />
+    <None Remove="TestFiles\Guild\GuildUpgrades.bulk.json" />
+    <None Remove="TestFiles\Guild\GuildUpgrades.ids.json" />
+    <None Remove="TestFiles\Guild\GuildUpgrades.single.json" />
+    <None Remove="TestFiles\Home\HomeCats.bulk.json" />
+    <None Remove="TestFiles\Home\HomeCats.ids.json" />
+    <None Remove="TestFiles\Home\HomeCats.single.json" />
     <None Remove="TestFiles\Home\HomeNodes.bulk.json" />
     <None Remove="TestFiles\Home\HomeNodes.ids.json" />
     <None Remove="TestFiles\Home\HomeNodes.single.json" />
+    <None Remove="TestFiles\Itemstats\Itemstats.bulk.json" />
+    <None Remove="TestFiles\Itemstats\Itemstats.ids.json" />
+    <None Remove="TestFiles\Itemstats\Itemstats.single.json" />
+    <None Remove="TestFiles\Items\Items.bulk.json" />
+    <None Remove="TestFiles\Items\Items.ids.json" />
+    <None Remove="TestFiles\Items\Items.single.json" />
+    <None Remove="TestFiles\Legends\Legends.bulk.json" />
+    <None Remove="TestFiles\Legends\Legends.ids.json" />
+    <None Remove="TestFiles\Legends\Legends.single.json" />
     <None Remove="TestFiles\MapChests\MapChests.bulk.json" />
     <None Remove="TestFiles\MapChests\MapChests.ids.json" />
     <None Remove="TestFiles\MapChests\MapChests.single.json" />
@@ -40,24 +177,23 @@
     <EmbeddedResource Include="TestFiles\Account\Account.2.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountAchievements.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountBank.json" />
-    <EmbeddedResource Include="TestFiles\Account\AccountWorldBosses.json" />
-    <EmbeddedResource Include="TestFiles\Account\AccountMapChests.json" />
+    <EmbeddedResource Include="TestFiles\Account\AccountDailyCrafting.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountDungeons.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountDyes.json" />
-    <EmbeddedResource Include="TestFiles\Account\AccountDailyCrafting.json" />
-    <EmbeddedResource Include="TestFiles\Account\AccountMountsTypes.json" />
-    <EmbeddedResource Include="TestFiles\Account\AccountMountsSkins.json" />
-    <EmbeddedResource Include="TestFiles\Account\AccountLuck.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountFinishers.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountGliders.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountHomeCats.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountHomeNodes.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountInventory.json" />
+    <EmbeddedResource Include="TestFiles\Account\AccountLuck.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountMailCarriers.json" />
+    <EmbeddedResource Include="TestFiles\Account\AccountMapChests.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountMasteries.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountMasteryPoints.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountMaterials.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountMinis.json" />
+    <EmbeddedResource Include="TestFiles\Account\AccountMountsSkins.json" />
+    <EmbeddedResource Include="TestFiles\Account\AccountMountsTypes.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountOutfits.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountPvpHeroes.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountRaids.json" />
@@ -65,6 +201,7 @@
     <EmbeddedResource Include="TestFiles\Account\AccountSkins.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountTitles.json" />
     <EmbeddedResource Include="TestFiles\Account\AccountWallet.json" />
+    <EmbeddedResource Include="TestFiles\Account\AccountWorldBosses.json" />
     <EmbeddedResource Include="TestFiles\Achievements\Achievements.bulk.json" />
     <EmbeddedResource Include="TestFiles\Achievements\Achievements.ids.json" />
     <EmbeddedResource Include="TestFiles\Achievements\Achievements.single.json" />
@@ -82,24 +219,6 @@
     <EmbeddedResource Include="TestFiles\Backstory\BackstoryQuestions.ids.json" />
     <EmbeddedResource Include="TestFiles\Backstory\BackstoryQuestions.single.json" />
     <EmbeddedResource Include="TestFiles\Build\Build.json" />
-    <EmbeddedResource Include="TestFiles\WorldBosses\WorldBosses.bulk.json" />
-    <EmbeddedResource Include="TestFiles\WorldBosses\WorldBosses.ids.json" />
-    <EmbeddedResource Include="TestFiles\WorldBosses\WorldBosses.single.json" />
-    <EmbeddedResource Include="TestFiles\Maps\Maps.bulk.json" />
-    <EmbeddedResource Include="TestFiles\Maps\Maps.ids.json" />
-    <EmbeddedResource Include="TestFiles\Maps\Maps.single.json" />
-    <EmbeddedResource Include="TestFiles\MapChests\MapChests.bulk.json" />
-    <EmbeddedResource Include="TestFiles\MapChests\MapChests.ids.json" />
-    <EmbeddedResource Include="TestFiles\MapChests\MapChests.single.json" />
-    <EmbeddedResource Include="TestFiles\DailyCrafting\DailyCrafting.bulk.json" />
-    <EmbeddedResource Include="TestFiles\DailyCrafting\DailyCrafting.ids.json" />
-    <EmbeddedResource Include="TestFiles\DailyCrafting\DailyCrafting.single.json" />
-    <EmbeddedResource Include="TestFiles\Home\HomeNodes.bulk.json" />
-    <EmbeddedResource Include="TestFiles\Home\HomeNodes.ids.json" />
-    <EmbeddedResource Include="TestFiles\Home\HomeNodes.single.json" />
-    <EmbeddedResource Include="TestFiles\Home\HomeCats.bulk.json" />
-    <EmbeddedResource Include="TestFiles\Home\HomeCats.ids.json" />
-    <EmbeddedResource Include="TestFiles\Home\HomeCats.single.json" />
     <EmbeddedResource Include="TestFiles\Characters\Characters.bulk.json" />
     <EmbeddedResource Include="TestFiles\Characters\Characters.ids.json" />
     <EmbeddedResource Include="TestFiles\Characters\Characters.single.json" />
@@ -117,7 +236,6 @@
     <EmbeddedResource Include="TestFiles\Colors\Colors.bulk.json" />
     <EmbeddedResource Include="TestFiles\Colors\Colors.ids.json" />
     <EmbeddedResource Include="TestFiles\Colors\Colors.single.json" />
-    <EmbeddedResource Include="TestFiles\CreateSubtoken\CreateSubtoken.json" />
     <EmbeddedResource Include="TestFiles\Commerce\CommerceDelivery.json" />
     <EmbeddedResource Include="TestFiles\Commerce\CommerceExchangeCoins.json" />
     <EmbeddedResource Include="TestFiles\Commerce\CommerceExchangeGems.json" />
@@ -150,9 +268,13 @@
     <EmbeddedResource Include="TestFiles\Continents\ContinentsFloorsRegionsMapsTasks.bulk.json" />
     <EmbeddedResource Include="TestFiles\Continents\ContinentsFloorsRegionsMapsTasks.ids.json" />
     <EmbeddedResource Include="TestFiles\Continents\ContinentsFloorsRegionsMapsTasks.single.json" />
+    <EmbeddedResource Include="TestFiles\CreateSubtoken\CreateSubtoken.json" />
     <EmbeddedResource Include="TestFiles\Currencies\Currencies.bulk.json" />
     <EmbeddedResource Include="TestFiles\Currencies\Currencies.ids.json" />
     <EmbeddedResource Include="TestFiles\Currencies\Currencies.single.json" />
+    <EmbeddedResource Include="TestFiles\DailyCrafting\DailyCrafting.bulk.json" />
+    <EmbeddedResource Include="TestFiles\DailyCrafting\DailyCrafting.ids.json" />
+    <EmbeddedResource Include="TestFiles\DailyCrafting\DailyCrafting.single.json" />
     <EmbeddedResource Include="TestFiles\Dungeons\Dungeons.bulk.json" />
     <EmbeddedResource Include="TestFiles\Dungeons\Dungeons.ids.json" />
     <EmbeddedResource Include="TestFiles\Dungeons\Dungeons.single.json" />
@@ -188,17 +310,32 @@
     <EmbeddedResource Include="TestFiles\Guild\GuildUpgrades.bulk.json" />
     <EmbeddedResource Include="TestFiles\Guild\GuildUpgrades.ids.json" />
     <EmbeddedResource Include="TestFiles\Guild\GuildUpgrades.single.json" />
-    <EmbeddedResource Include="TestFiles\Items\Items.bulk.json" />
-    <EmbeddedResource Include="TestFiles\Items\Items.ids.json" />
-    <EmbeddedResource Include="TestFiles\Items\Items.single.json" />
+    <EmbeddedResource Include="TestFiles\Home\HomeCats.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Home\HomeCats.ids.json" />
+    <EmbeddedResource Include="TestFiles\Home\HomeCats.single.json" />
+    <EmbeddedResource Include="TestFiles\Home\HomeNodes.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Home\HomeNodes.ids.json" />
+    <EmbeddedResource Include="TestFiles\Home\HomeNodes.single.json" />
     <EmbeddedResource Include="TestFiles\Itemstats\Itemstats.bulk.json" />
     <EmbeddedResource Include="TestFiles\Itemstats\Itemstats.ids.json" />
     <EmbeddedResource Include="TestFiles\Itemstats\Itemstats.single.json" />
-    <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
-    <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
+    <EmbeddedResource Include="TestFiles\Items\Items.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Items\Items.ids.json" />
+    <EmbeddedResource Include="TestFiles\Items\Items.single.json" />
     <EmbeddedResource Include="TestFiles\Legends\Legends.bulk.json" />
     <EmbeddedResource Include="TestFiles\Legends\Legends.ids.json" />
     <EmbeddedResource Include="TestFiles\Legends\Legends.single.json" />
+    <EmbeddedResource Include="TestFiles\MapChests\MapChests.bulk.json" />
+    <EmbeddedResource Include="TestFiles\MapChests\MapChests.ids.json" />
+    <EmbeddedResource Include="TestFiles\MapChests\MapChests.single.json" />
+    <EmbeddedResource Include="TestFiles\Maps\Maps.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Maps\Maps.ids.json" />
+    <EmbeddedResource Include="TestFiles\Maps\Maps.single.json" />
+    <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
+    <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
+    <EmbeddedResource Include="TestFiles\WorldBosses\WorldBosses.bulk.json" />
+    <EmbeddedResource Include="TestFiles\WorldBosses\WorldBosses.ids.json" />
+    <EmbeddedResource Include="TestFiles\WorldBosses\WorldBosses.single.json" />
   </ItemGroup>
 
   <ItemGroup>
