Extend SonarQube settings to branches and PRs

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,7 +16,16 @@ branches:
 before_build:
   - dotnet restore
   - dotnet tool install --global dotnet-sonarscanner
-  - dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="%sonar_login%"
+  - ps: >-
+      if ($env:APPVEYOR_PULL_REQUEST_NUMBER -eq "") {
+        if ($env:APPVEYOR_REPO_TAG -eq "true") {
+          dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$env:sonar_login" /d:sonar.branch.name:"$env:APPVEYOR_REPO_BRANCH" /v:"$env:APPVEYOR_REPO_TAG_NAME"
+        } else {
+          dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$env:sonar_login" /d:sonar.branch.name:"$env:APPVEYOR_REPO_BRANCH"
+        }
+      } else {
+        dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$env:sonar_login" /d:sonar.pullrequest.key:"$env:APPVEYOR_PULL_REQUEST_NUMBER" /d:sonar.pullrequest.branch:"$env:APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH" /d:sonar.pullrequest.base:"$env:APPVEYOR_REPO_BRANCH"
+      }
 
 build:
   project: Gw2Sharp.sln
