--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,7 +17,7 @@ before_build:
   - dotnet restore
   - dotnet tool install --global dotnet-sonarscanner
   - ps: >-
-      if ($env:APPVEYOR_PULL_REQUEST_NUMBER -eq "") {
+      if (!(Test-Path env:APPVEYOR_PULL_REQUEST_NUMBER)) {
         if ($env:APPVEYOR_REPO_TAG -eq "true") {
           dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$env:sonar_login" /d:sonar.branch.name:"$env:APPVEYOR_REPO_BRANCH" /v:"$env:APPVEYOR_REPO_TAG_NAME"
         } else {
