--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,19 +16,21 @@ branches:
 before_build:
   - dotnet restore
   - dotnet tool install --global dotnet-sonarscanner
+  - choco install -y opencover.portable
   - ps: >-
       if (!(Test-Path env:APPVEYOR_PULL_REQUEST_NUMBER)) {
         if ($env:APPVEYOR_REPO_TAG -eq "true") {
-          dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$env:sonar_login" /d:sonar.branch.name="$env:APPVEYOR_REPO_BRANCH" /v:"$env:APPVEYOR_REPO_TAG_NAME"
+          dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$env:sonar_login" /d:sonar.cs.opencover.reportsPaths="coverage.xml" /d:sonar.branch.name="$env:APPVEYOR_REPO_BRANCH" /v:"$env:APPVEYOR_REPO_TAG_NAME"
         } else {
-          dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$env:sonar_login" /d:sonar.branch.name="$env:APPVEYOR_REPO_BRANCH"
+          dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$env:sonar_login" /d:sonar.cs.opencover.reportsPaths="coverage.xml" /d:sonar.branch.name="$env:APPVEYOR_REPO_BRANCH"
         }
       } else {
-        dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$env:sonar_login" /d:sonar.pullrequest.key="$env:APPVEYOR_PULL_REQUEST_NUMBER" /d:sonar.pullrequest.branch="$env:APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH" /d:sonar.pullrequest.base="$env:APPVEYOR_REPO_BRANCH"
+        dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$env:sonar_login" /d:sonar.cs.opencover.reportsPaths="coverage.xml" /d:sonar.pullrequest.key="$env:APPVEYOR_PULL_REQUEST_NUMBER" /d:sonar.pullrequest.branch="$env:APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH" /d:sonar.pullrequest.base="$env:APPVEYOR_REPO_BRANCH"
       }
 
 build:
   project: Gw2Sharp.sln
 
 after_test:
+  - OpenCover.Console.exe -register:user -target:"C:\Program Files\dotnet\dotnet.exe" -targetargs:"test" -output:"coverage.xml"
   - dotnet sonarscanner end /d:sonar.login="%sonar_login%"
