--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,13 +24,16 @@ before_build:
         } else {
           dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$env:SONAR_TOKEN" /d:sonar.cs.opencover.reportsPaths="coverage.xml" /d:sonar.branch.name="$env:APPVEYOR_REPO_BRANCH"
         }
-      } else {
-        dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$env:SONAR_TOKEN" /d:sonar.cs.opencover.reportsPaths="coverage.xml" /d:sonar.pullrequest.key="$env:APPVEYOR_PULL_REQUEST_NUMBER" /d:sonar.pullrequest.branch="$env:APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH" /d:sonar.pullrequest.base="$env:APPVEYOR_REPO_BRANCH"
       }
 
 build:
   project: Gw2Sharp.sln
 
+test:
+  - OpenCover.Console.exe -register:user -target:"C:\Program Files\dotnet\dotnet.exe" -targetargs:"test Gw2Sharp.Tests/Gw2Sharp.Tests.csproj --configuration %CONFIGURATION% --no-build" -output:"coverage.xml" -oldStyle
+
 after_test:
-  - OpenCover.Console.exe -register:user -target:"C:\Program Files\dotnet\dotnet.exe" -targetargs:"test Gw2Sharp.Tests/Gw2Sharp.Tests.csproj --configuration %CONFIGURATION% --no-build" -output:"coverage.xml"
-  - dotnet sonarscanner end /d:sonar.login="%SONAR_TOKEN%"
+  - ps: >-
+      if (!(Test-Path env:APPVEYOR_PULL_REQUEST_NUMBER)) {
+        dotnet sonarscanner end /d:sonar.login="$env:SONAR_TOKEN"
+      }
