Add exception handling guide

--- a/Gw2Sharp.DocFX/guides/toc.yml
+++ b/Gw2Sharp.DocFX/guides/toc.yml
@@ -8,6 +8,8 @@
       topicUid: Guides.ParameterizedEndpoints
     - name: Subtokens
       topicUid: Guides.Subtokens
+    - name: Exception handling
+      topicUid: Guides.ExceptionHandling
     - name: HTTP headers
       topicUid: Guides.HttpHeaders
     - name: Last-Modified
