--- a/Gw2Sharp.DocFX/guides/toc.yml
+++ b/Gw2Sharp.DocFX/guides/toc.yml
@@ -8,9 +8,11 @@
       topicUid: Guides.ParameterizedEndpoints
     - name: Subtokens
       topicUid: Guides.Subtokens
-    - name: Exception handling
-      topicUid: Guides.ExceptionHandling
     - name: HTTP headers
       topicUid: Guides.HttpHeaders
     - name: Last-Modified
       topicUid: Guides.LastModified
+    - name: Exception handling
+      topicUid: Guides.ExceptionHandling
+    - name: Debug symbols
+      topicUid: Guides.Symbols
